forcing python 3.11 for macos ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -278,7 +278,7 @@ jobs:
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        brew reinstall python
+        brew reinstall python@3.11
         brew install --cask xquartz
         brew install wget llvm libomp ninja open-mpi
         # TTK dependencies
