trying not to force python 3.11 for macos CI

--- a/.github/actions/test-ttk-unix/action.yml
+++ b/.github/actions/test-ttk-unix/action.yml
@@ -22,11 +22,11 @@ runs:
         cmake --build . --parallel
         ./ttkExample-vtk-c++ -i ../../data/inputData.vtu
 
-        #    - name: Test Python example
-        #      shell: bash
-        #      run: |
-        #        cd $GITHUB_WORKSPACE/examples/python
-        #        python3 example.py ../data/inputData.vtu
+    - name: Test Python example
+      shell: bash
+      run: |
+        cd $GITHUB_WORKSPACE/examples/python
+        python3 example.py ../data/inputData.vtu
 
     - name: Test pvpython example
       shell: bash
