final python setups for pv512 patchset

--- a/paraview/patch/package.yml
+++ b/paraview/patch/package.yml
@@ -72,18 +72,20 @@ jobs:
   # macOS #
   # ----- #
   build-macos:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
     - uses: actions/checkout@v3
       name: Checkout TTK-ParaView source code
 
     - name: Remove hosted Python
       run: |
+        sudo rm -rf /Library/Frameworks/Python.framework/
         sudo rm -rf /usr/local/Frameworks/Python.framework
 
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
+        brew reinstall python@3.11
         brew install --cask xquartz
         brew install wget libomp mesa glew qt@5 ninja python
 
@@ -131,7 +133,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge qt-main
+        conda install -c conda-forge qt-main python=3.10
 
     - name: Remove hosted Python
       shell: bash
