trying to remove cellar python (macos)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -275,6 +275,7 @@ jobs:
       run: |
         sudo rm -rf /Library/Frameworks/Python.framework/
         sudo rm -rf /usr/local/Frameworks/Python.framework/
+        sudo rm -rf /usr/local/Cellar/python@3.11/3.11.9/Frameworks/Python.framework/Versions/3.11/Resources/Python.app/Contents/MacOS/Python
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
