tweaks for macos python ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -278,7 +278,7 @@ jobs:
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        brew reinstall python@3.11
+        brew reinstall python
         brew install --cask xquartz
         brew install wget llvm libomp ninja open-mpi
         # TTK dependencies
@@ -381,7 +381,8 @@ jobs:
     - name: Run ttk-data Python scripts
       run: |
         cd ttk-data
-        pvpython -u python/run.py
+        #pvpython -u python/run.py
+        python -u python/run.py
       env:
         PV_PLUGIN_PATH: /usr/local/bin/plugins/TopologyToolKit
 
