--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PV_TAG: v5.11.1-headless
+  PV_TAG: v5.12.0-headless
   PV_REPO: topology-tool-kit/ttk-paraview
 
 
@@ -381,7 +381,7 @@ jobs:
     - name: Run ttk-data Python scripts
       run: |
         cd ttk-data
-        pvpython -u python/run.py
+        python3 -u python/run.py
       env:
         PV_PLUGIN_PATH: /usr/local/bin/plugins/TopologyToolKit
 
