--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -273,7 +273,7 @@ jobs:
         sudo cp -r ttk-paraview/* /usr/local
         tar xzf ttk.tar.gz
         sudo cp -r ttk/* /usr/local
-        pvpython -m pip install scikit-learn
+        python -m pip install scikit-learn
 
     - name: Set environment variables
       run: |
