--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -245,14 +245,15 @@ jobs:
     - uses: actions/checkout@v3
       name: Checkout TTK source code
 
-#    - name: Remove hosted Python
-#      run: |
-#        sudo rm -rf /Library/Frameworks/Python.framework
-#        sudo rm -rf /usr/local/Frameworks/Python.framework
+    - name: Remove hosted Python
+      run: |
+        sudo rm -rf /Library/Frameworks/Python.framework
+        sudo rm -rf /usr/local/Frameworks/Python.framework
 
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
+        brew reinstall python
         brew install --cask xquartz
         brew install wget llvm libomp mesa glew qt@5 ninja 
         # TTK dependencies
@@ -273,7 +274,7 @@ jobs:
         sudo cp -r ttk-paraview/* /usr/local
         tar xzf ttk.tar.gz
         sudo cp -r ttk/* /usr/local
-        python -m pip install scikit-learn
+        python3 -m pip install scikit-learn
 
     - name: Set environment variables
       run: |
