--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -271,14 +271,14 @@ jobs:
     - uses: actions/checkout@v3
       name: Checkout TTK source code
 
-    - name: Remove hosted Python
-      run: |
-        sudo rm -rf /Library/Frameworks/Python.framework/
-        sudo rm -rf /usr/local/Frameworks/Python.framework/
+        #    - name: Remove hosted Python
+        #      run: |
+        #        sudo rm -rf /Library/Frameworks/Python.framework/
+        #        sudo rm -rf /usr/local/Frameworks/Python.framework/
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        brew reinstall python
+        #        brew reinstall python
         brew install --cask xquartz
         brew install wget llvm libomp ninja open-mpi
         # TTK dependencies
@@ -309,7 +309,7 @@ jobs:
       run: |
         tar xzf ttk-paraview-headless.tar.gz
         sudo cp -r ttk-paraview/* /usr/local
-        python3 -m pip install scikit-learn
+        python -m pip install scikit-learn
 
     - name: Set compilers as environment variables
       run: |
