--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -326,7 +326,7 @@ jobs:
       shell: bash
       run: |
         conda install -c conda-forge "qt>=5.12" boost eigen spectralib zfp \
-          scikit-learn openmp graphviz websocketpp
+          scikit-learn llvm-openmp graphviz websocketpp clangxx
 
     - name: Remove hosted Python
       shell: bash
