--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -429,7 +429,7 @@ jobs:
       shell: bash
       run: |
         conda install -c conda-forge boost glew eigen spectralib zfp  \
-          scikit-learn openmp graphviz ninja websocketpp sccache=0.4.2 python=3.10 zlib qhull
+          scikit-learn graphviz ninja websocketpp sccache=0.4.2 python=3.10 zlib qhull llvm-openmp clangxx
         # add sccache to PATH
         echo "$CONDA_ROOT/bin" >> $GITHUB_PATH
         # add TTK & ParaView install folders to PATH
