--- a/.github/actions/install-deps-unix/action.yml
+++ b/.github/actions/install-deps-unix/action.yml
@@ -17,7 +17,7 @@ runs:
       shell: bash
       run: |
         wget https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-2.3.1%2Bcpu.zip
-        unzip libtorch-cxx11-abi-shared-with-deps-2.3.1%2Bcpu.zip
+        unzip libtorch-cxx11-abi-shared-with-deps-2.3.1+cpu.zip
         sudo cp -R libtorch/* /usr/local/
 
     - name: Install ZFP dependency
