--- a/core/base/TTKBaseConfig.cmake.in
+++ b/core/base/TTKBaseConfig.cmake.in
@@ -17,7 +17,7 @@ if (@TTK_ENABLE_QHULL@ AND @Qhull_FOUND@)
   find_dependency(Qhull REQUIRED)
 endif()
 
-if (@TTK_ENABLE_TORCH@ AND @TORCH_FOUND@)
+if (@TTK_ENABLE_TORCH@)
   set(Torch_DIR "@Torch_DIR@" CACHE PATH "Use TTK Torch dir" FORCE)
   find_dependency(Torch REQUIRED @Torch_DIR@)
 endif()
