--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,6 +71,14 @@ jobs:
     - name: Install optional dependencies
       uses: ./.github/actions/install-deps-unix
 
+    # TODO: try to replicate for mac
+    - name: Install Torch
+      shell: bash
+      run: |
+        wget https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-2.3.1%2Bcpu.zip
+        unzip libtorch-cxx11-abi-shared-with-deps-2.3.1+cpu.zip
+        sudo cp -R libtorch/* /usr/local/
+
     - name: Fetch archived ccache
       continue-on-error: true
       run: |
