--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -443,7 +443,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge boost glew eigen spectralib zfp  \
+        conda install -c conda-forge glew eigen spectralib zfp  \
           scikit-learn graphviz ninja websocketpp sccache=0.4.2 python=3.10 zlib qhull llvm-openmp clangxx libboost-devel
         # add sccache to PATH
         echo "$CONDA_ROOT/bin" >> $GITHUB_PATH
@@ -451,26 +451,6 @@ jobs:
         echo "$PV_DIR/bin" >> $GITHUB_PATH
         echo "$TTK_DIR/bin" >> $GITHUB_PATH
         conda info --all
-        echo "LISTING $CONDA_ROOT/"
-        ls -lh $CONDA_ROOT/
-        echo "LISTING $CONDA_ROOT/bin"
-        ls -lh $CONDA_ROOT/bin
-        echo "LISTING $CONDA_ROOT/lib"
-        ls -lh $CONDA_ROOT/lib
-        echo "LISTING $CONDA_ROOT/share"
-        ls -lh $CONDA_ROOT/share
-        echo "LISTING $CONDA_ROOT/Library"
-        ls -lh $CONDA_ROOT/Library
-        echo "LISTING $CONDA_ROOT/Library/share"
-        ls -lh $CONDA_ROOT/Library/share
-        echo "LISTING $CONDA_ROOT/Library/share/cmake"
-        ls -lh $CONDA_ROOT/Library/share/cmake
-        echo "LISTING $CONDA_ROOT/Library/share/cmake/Modules"
-        ls -lh $CONDA_ROOT/Library/share/cmake/Modules
-        echo "Trying to find BoostConfig.make from current directory"
-        find . -name 'BoostConfig.cmake'
-        echo "Trying to find BoostConfig.make from $CONDA_ROOT"
-        find $CONDA_ROOT -name 'BoostConfig.cmake'
 
     - name: Remove hosted Python
       shell: bash
@@ -502,7 +482,7 @@ jobs:
     - name: Create & configure TTK build directory
       shell: cmd
       run: |
-        set CMAKE_PREFIX_PATH=%CONDA_ROOT%\Library\lib\cmake;%CONDA_ROOT%\Library\share\eigen3\cmake;%CONDA_ROOT%\Library\share\Qull\cmake;%CONDA_ROOT%\Library\cmake;%ProgramFiles%\TTK-ParaView\lib\cmake
+        set CMAKE_PREFIX_PATH=%CONDA_ROOT%\Library\lib\cmake;%CONDA_ROOT%\Library\share\eigen3\cmake;%CONDA_ROOT%\Library\share\Qull\cmake;%CONDA_ROOT%\Library\cmake;%ProgramFiles%\TTK-ParaView\lib\cmake;
         set CC=clang-cl.exe
         set CXX=clang-cl.exe
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
