windows ci, fixing boost dep

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -325,7 +325,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge "qt>=5.12" boost eigen spectralib zfp \
+        conda install -c conda-forge "qt>=5.12" libboost-devel eigen spectralib zfp \
           scikit-learn llvm-openmp graphviz websocketpp clangxx
 
     - name: Remove hosted Python
@@ -411,7 +411,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge "qt>=5.12" boost eigen spectralib zfp \
+        conda install -c conda-forge "qt>=5.12" libboost-devel eigen spectralib zfp \
           scikit-learn openmp graphviz websocketpp
 
     - name: Remove hosted Python
