--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -443,7 +443,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge boost glew eigen spectralib zfp  \
+        conda install -c conda-forge libboost-devel glew eigen spectralib zfp  \
           scikit-learn graphviz ninja websocketpp sccache=0.4.2 python=3.10 zlib qhull llvm-openmp clangxx
         # add sccache to PATH
         echo "$CONDA_ROOT/bin" >> $GITHUB_PATH
