--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -444,7 +444,7 @@ jobs:
       shell: bash
       run: |
         conda install -c conda-forge glew eigen spectralib zfp  \
-          scikit-learn graphviz ninja websocketpp sccache=0.4.2 python=3.10 zlib qhull llvm-openmp clangxx libboost-devel
+          scikit-learn graphviz ninja sccache=0.4.2 python=3.10 zlib qhull llvm-openmp clangxx libboost-devel
         # add sccache to PATH
         echo "$CONDA_ROOT/bin" >> $GITHUB_PATH
         # add TTK & ParaView install folders to PATH
