--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
       name: Checkout TTK source code
@@ -99,7 +99,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
       name: Checkout TTK source code
@@ -122,6 +122,12 @@ jobs:
 
     - name: Set PYTHONPATH for Ubuntu 22.04 pvpython
       if: matrix.os == 'ubuntu-22.04'
+      run: |
+        # pvpython does not embed the correct PYTHONPATH
+        echo "PYTHONPATH=/usr/lib/python3/dist-packages:$PYTHONPATH" >> $GITHUB_ENV
+
+    - name: Set PYTHONPATH for Ubuntu 24.04 pvpython
+      if: matrix.os == 'ubuntu-24.04'
       run: |
         # pvpython does not embed the correct PYTHONPATH
         echo "PYTHONPATH=/usr/lib/python3/dist-packages:$PYTHONPATH" >> $GITHUB_ENV
@@ -569,6 +575,14 @@ jobs:
         tag: ${{ github.ref }}
         file: ttk-ubuntu-22.04.deb/ttk.deb
         asset_name: ttk-$tag-ubuntu-22.04.deb
+
+    - name: Upload Ubuntu Noble Numbat .deb as Release Asset
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ github.ref }}
+        file: ttk-ubuntu-24.04.deb/ttk.deb
+        asset_name: ttk-$tag-ubuntu-24.04.deb
 
     - name: Upload macOS binary archives as Release Asset
       uses: svenstaro/upload-release-action@v2
