--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
     if: ${{ github.repository_owner == 'topology-tool-kit' || !contains(github.ref, 'heads') }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     env:
       CCACHE_DIR: /home/runner/.ccache
       CCACHE_MAXSIZE: 500M
@@ -163,7 +163,7 @@ jobs:
     needs: test-build-ubuntu
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
         testSet: [pyTests, screenshotTests]
     steps:
     - name: Install Ubuntu dependencies
@@ -684,6 +684,14 @@ jobs:
         tag: ccache
         file: ttk-ccache-ubuntu-22.04/ttk-ccache.tar.gz
         asset_name: ttk-ccache-ubuntu-22.04.tar.gz
+
+    - name: Upload Ubuntu Nobel Numbat .deb as Release Asset
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ccache
+        file: ttk-ccache-ubuntu-24.04/ttk-ccache.tar.gz
+        asset_name: ttk-ccache-ubuntu-24.04.tar.gz
 
     - name: Upload .pkg as Release Asset
       uses: svenstaro/upload-release-action@v2
