--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PV_TAG: v5.12.0-headless
+  PV_TAG: v5.13.0-headless
   PV_REPO: topology-tool-kit/ttk-paraview
 
 
@@ -92,6 +92,7 @@ jobs:
       run: |
         sudo apt install ./ttk-paraview-headless.deb
 
+    # TODO: more aggressive warnings? (ubuntu-24.04)
     - name: Create & configure TTK build directory
       run: |
         mkdir build
@@ -149,7 +150,6 @@ jobs:
     - name: Install Ubuntu dependencies
       run: |
         sudo apt update
-        sudo python3 -m pip install scikit-learn
 
     - name: Install Torch
       shell: bash
