--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -404,7 +404,8 @@ jobs:
       shell: bash
       run: |
         conda install -c conda-forge libboost-devel glew eigen spectralib zfp  \
-          scikit-learn graphviz ninja python=3.10 zlib qhull llvm-openmp clangxx
+          sqlite scikit-learn graphviz ninja python=3.10 zlib qhull \
+          llvm-openmp clangxx
         # add TTK & ParaView install folders to PATH
         echo "$PV_DIR/bin" >> $GITHUB_PATH
         echo "$TTK_DIR/bin" >> $GITHUB_PATH
