[ci] continue on macos-14 pvpython errors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -299,6 +299,7 @@ jobs:
             https://github.com/${{ env.PV_REPO }}/releases/download/${{ env.PV_TAG }}/ttk-paraview-headless-${{ matrix.os }}-arm64.tar.gz
         fi
 
+    # NOTE: pvpython is broken on macos-14, but not on macos-12 (?)
     - name: Install ParaView
       continue-on-error: true
       run: |
@@ -378,6 +379,7 @@ jobs:
         retention-days: 10
 
     - name: Run ttk-data Python scripts
+      continue-on-error: true
       run: |
         cd ttk-data
         pvpython -u python/run.py
