[ci] trying to fix windows websocketio issue

--- a/core/base/webSocketIO/CMakeLists.txt
+++ b/core/base/webSocketIO/CMakeLists.txt
@@ -8,5 +8,5 @@ ttk_add_base_library(webSocketIO
 
 if (TTK_ENABLE_WEBSOCKETPP)
   target_compile_definitions(webSocketIO PUBLIC TTK_ENABLE_WEBSOCKETPP)
-  target_include_directories(webSocketIO PUBLIC ${WEBSOCKETPP_INCLUDE_DIR})
+  target_include_directories(webSocketIO SYSTEM PRIVATE ${WEBSOCKETPP_INCLUDE_DIR})
 endif()
