--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -268,6 +268,8 @@ jobs:
       matrix:
         os: [macos-12, macos-14]
     if: ${{ github.repository_owner == 'topology-tool-kit' || !contains(github.ref, 'heads') }}
+     env:
+      DYLD_LIBRARY_PATH: /usr/local/lib
 
     steps:
     - uses: actions/checkout@v4
