--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -161,6 +161,7 @@ jobs:
 
     - name: Check Doxygen documentation warnings
       if: matrix.config.dox
+      continue-on-error: true
       run: |
         cd build
         ! cmake --build . --target doc |& grep warning
