--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -209,6 +209,8 @@ jobs:
         # remove buggy example
         # related issue: https://github.com/topology-tool-kit/ttk/issues/1055
         rm ttk-data/states/nestedTrackingFromOverlap.py
+        # remove examples which fill up the memory
+        rm ttk-data/states/topologicalOptimization_darkSky.pvsm
 
         cd ttk-data/tests
         mkdir output_screenshots
@@ -374,6 +376,8 @@ jobs:
         # remove buggy example
         # related issue: https://github.com/topology-tool-kit/ttk/issues/1055
         rm ttk-data/states/nestedTrackingFromOverlap.py
+        # remove examples which fill up the memory
+        rm ttk-data/states/topologicalOptimization_darkSky.pvsm
         cd ttk-data/tests
         mkdir output_screenshots
         pvpython -u validate.py || (tar zcf screenshots.tar.gz output_screenshots && false)
@@ -394,6 +398,8 @@ jobs:
         # remove buggy example
         # related issue: https://github.com/topology-tool-kit/ttk/issues/1055
         rm python/nestedTrackingFromOverlap.py
+        # remove examples which fill up the memory
+        rm python/topologicalOptimization_darkSky.py
         pvpython -u python/run.py
       env:
         PV_PLUGIN_PATH: /usr/local/bin/plugins/TopologyToolKit
@@ -576,6 +582,8 @@ jobs:
         set PV_PLUGIN_PATH=%TTK_DIR%\bin\plugins
         cd ttk-data
         rm python/nestedTrackingFromOverlap.py
+        # remove examples which fill up the memory
+        rm python/topologicalOptimization_darkSky.py
         pvpython.exe -u python\run.py
 
     - name: Test ttk-data Python scripts results [NOT ENFORCED]
