--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -300,7 +300,7 @@ jobs:
     - name: Fetch TTK .tar.gz artifact
       uses: actions/download-artifact@v4.1.7
       with:
-        name: ttk.tar.gz
+        name: ttk-${{ matrix.os }}.tar.gz
 
     - name: Install binary archives packages
       run: |
