before fixing map

--- a/core/base/trackingFromFields/CMakeLists.txt
+++ b/core/base/trackingFromFields/CMakeLists.txt
@@ -1,8 +1,10 @@
 ttk_add_base_library(trackingFromFields
   SOURCES
     TrackingFromFields.cpp
+    CriticalPointTracking.cpp
   HEADERS
     TrackingFromFields.h
+    CriticalPointTracking.h
   DEPENDS
     persistenceDiagram
     bottleneckDistance
