--- a/core/base/trackingFromFields/CMakeLists.txt
+++ b/core/base/trackingFromFields/CMakeLists.txt
@@ -1,13 +1,12 @@
 ttk_add_base_library(trackingFromFields
   SOURCES
     TrackingFromFields.cpp
-    CriticalPointTracking.cpp
   HEADERS
     TrackingFromFields.h
-    CriticalPointTracking.h
   DEPENDS
     persistenceDiagram
     bottleneckDistance
     trackingFromPersistenceDiagrams
+    trackingFromCriticalPoints
     triangulation
     )
