--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -388,7 +388,10 @@ jobs:
         path: ttk-data/tests/screenshots.tar.gz
         retention-days: 10
 
-    - name: Run ttk-data Python scripts
+    - name: Run ttk-data Python scripts [TEMPORARILY NOT ENFORCED]
+      if: false
+      id: validate
+      continue-on-error: true
       run: |
         cd ttk-data
         # remove buggy example
