--- a/paraview/patch/headless.yml
+++ b/paraview/patch/headless.yml
@@ -80,17 +80,15 @@ jobs:
     - uses: actions/checkout@v4
       name: Checkout TTK-ParaView source code
 
-    - name: Remove hosted Python
-      run: |
-        sudo rm -rf /Library/Frameworks/Python.framework/
-        sudo rm -rf /usr/local/Frameworks/Python.framework/
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
 
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        brew reinstall python
         brew install --cask xquartz
-        brew install ninja 
+        brew install ninja open-mpi
 
     - name: Create & configure ParaView build directory
       run: |
@@ -111,6 +109,22 @@ jobs:
       run: |
         cd build
         cpack -G TGZ
+
+    - name: Install ParaView
+      run: |
+        cd build
+        sudo cmake --build . --target install
+        # pvpython does not embed the correct PYTHONPATH
+        echo "PYTHONPATH=/usr/local/lib/python3.12/site-packages:$PYTHONPATH" >> $GITHUB_ENV
+
+    - name: Test Python imports
+      run: |
+        python3 -m vtk
+        python3 -m paraview.simple
+        pvpython -m vtk
+        pvpython -m paraview.simple
+      env:
+        DYLD_LIBRARY_PATH: /usr/local/lib
 
     - name: Upload compressed binaries
       uses: actions/upload-artifact@v4
